# home_monitoring_display

./: .gitignore  README.md  pyproject.toml
conf/: analytics_config.yaml  consumption_config.yaml  inky_config.yaml  streaming_config.yaml
conf/templates/: analytics_config.yaml  connectors_config.yaml  consumption_config.yaml  inky_config.yaml  streaming_config.yaml
home_monitoring_display/: analytics_dashboard.ipynb  analytics_dashboard.py  electrical_consumption.ipynb  electrical_consumption.py  indicator_factory.py  multi_view_connector.py  query_influxdb.py  streaming_dashboard.ipynb  streaming_dashboard.py  utils.py
home_monitoring_display/influxdb/: multi_view_connector.py  query_influxdb.py  test_query_influxdb.py
home_monitoring_display/inky/: cities_weather_page.py  day_weather_page.py  elec_consumption_page.py  home_monitor_page.py  inky_controller.py  inky_page.py  sys_monitor_page.py
home_monitoring_display/panel/: analytics_dashboard.py  electrical_consumption.py  indicator_factory.py  streaming_dashboard.py  test_data_elec.py  test_terminal.py
notebooks/: test_influx_query.ipynb  test_meteo.ipynb  test_png.py  test_stats_elec.ipynb  test_streaming_panel.ipynb  test_template.ipynb
services/templates/: home_monitoring_dashboard.service  home_monitoring_dashboard.sh  home_monitoring_remote_dashboard.service  home_monitoring_remote_dashboard.sh  inky_dashboards.service  inky_dashboards.sh
tests/: test_monitor_page.py
